src/QGraphicsView.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQGraphicsViewCtor_1(void * parent);
EXTERNC void * SCWQGraphicsViewCtor_1(void * parent);
EXTERNC void * QWQGraphicsViewCtor_2(void * scene, void * parent);
EXTERNC void * SCWQGraphicsViewCtor_2(void * scene, void * parent);
EXTERNC void * QWQGraphicsViewsizeHint(void * obj);
EXTERNC int8_t QWQGraphicsViewisInteractive(void * obj);
EXTERNC void * QWQGraphicsViewscene(void * obj);
EXTERNC void QWQGraphicsViewsetScene(void * obj, void * scene);
EXTERNC void * QWQGraphicsViewsceneRect(void * obj);
EXTERNC void QWQGraphicsViewsetSceneRect_1(void * obj, void * rect);
EXTERNC void QWQGraphicsViewsetSceneRect_2(void * obj, double  x, double  y, double  w, double  h);
EXTERNC int8_t QWQGraphicsViewisTransformed(void * obj);
EXTERNC void QWQGraphicsViewcenterOn_1(void * obj, void * pos);
EXTERNC void QWQGraphicsViewcenterOn_2(void * obj, double  x, double  y);
EXTERNC void QWQGraphicsViewcenterOn_3(void * obj, void * item);
EXTERNC void QWQGraphicsViewensureVisible_1(void * obj, void * rect, int32_t  xmargin, int32_t  ymargin);
EXTERNC void QWQGraphicsViewensureVisible_2(void * obj, double  x, double  y, double  w, double  h, int32_t  xmargin, int32_t  ymargin);
EXTERNC void QWQGraphicsViewensureVisible_3(void * obj, void * item, int32_t  xmargin, int32_t  ymargin);
EXTERNC void QWQGraphicsViewfitInView_1(void * obj, void * rect, int  aspectRadioMode);
EXTERNC void QWQGraphicsViewfitInView_2(void * obj, double  x, double  y, double  w, double  h, int  aspectRadioMode);
EXTERNC void * QWQGraphicsViewitemAt_1(void * obj, void * pos);
EXTERNC void * QWQGraphicsViewitemAt_2(void * obj, int32_t  x, int32_t  y);
EXTERNC void * QWQGraphicsViewmapFromScene_1(void * obj, void * point);
EXTERNC void * QWQGraphicsViewbackgroundBrush(void * obj);
EXTERNC void QWQGraphicsViewinvalidateScene(void * obj, void * rect, int  layers);
EXTERNC void QWvalidateCB_QGraphicsView(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQGraphicsViewDtor(void *);
EXTERNC void SCWQGraphicsViewDtor(void *);